Tests/ShouldFail/FactERRConcat1.adl
CONTEXT FactuurTicket1 IN ENGLISH LATEX
--! LET OP: Dit bestand moet je zien in samenhang met FactuurTicket2.adl !--

factuurRegel :: Factuur * Regel
regelText :: Regel * TEXT [UNI] =[ ("R is een Regel", "R is een text") ]
factuurOK :: Factuur * Factuur [PROP]

RULE "Factuur controle": factuurOK = I[Factuur] /\ -(factuurRegel;-regelText);V
MEANING "Definitie: een factuur is ok DESDA de factuur is leeg, of elk van zijn regels bevat een text."

--[Factuur 1]--
POPULATION factuurRegel CONTAINS [ ("Factuur1", "Regel-1-1") ]
--POPULATION regelText    CONTAINS [ ("Regel-1-1", "Eentje") ]
--POPULATION factuurRegel CONTAINS [ ("Factuur1", "Regel-2-1") ]
--POPULATION regelText    CONTAINS [ ("Regel-2-1", "Tweede") ]
POPULATION factuurOK    CONTAINS [ ("Factuur1", "Factuur1") ]

--[Factuur 2]--
--POPULATION factuurOK    CONTAINS [ ("Factuur2", "Factuur2") ]

ENDCONTEXT
